# Physics

./: .gitignore  CMakeLists.txt  main.cpp  package-lock.cmake
.github/workflows/: check_compilation.yml  dispatch.yml  physics_ci.yml
src/: NewtonianPhysics.cpp  NewtonianPhysics.hpp  PhysicsAPI.cpp  PhysicsAPI.hpp
src/components/: GravityCache.hpp
src/components/kinematics/: Acceleration.hpp  Position.hpp  Velocity.hpp
src/components/properties/: Mass.hpp
src/components/solver/: ForceAccumulator.hpp  PreviousAcceleration.hpp  PreviousPosition.hpp
src/events/: Gravity.cpp  Gravity.hpp
src/forces/: Gravity.cpp  Gravity.hpp
src/integration/: Verlet.cpp  Verlet.hpp
tests/: CMakeLists.txt
tests/events/: GravityEventTest.cpp
tests/forces/: GravityTest.cpp
tests/integration/: VerletTest.cpp
tests/physics/: NewtonianPhysicsTest.cpp
